--- a/531New/Base.lproj/Main.storyboard
+++ b/531New/Base.lproj/Main.storyboard
@@ -199,7 +199,7 @@
             </objects>
             <point key="canvasLocation" x="594" y="28"/>
         </scene>
-        <!--Todo Table View Controller-->
+        <!--Workouts-->
         <scene sceneID="LTc-cO-W8A">
             <objects>
                 <tableViewController id="Nno-Es-Bjs" customClass="TodoTableViewController" customModule="_31New" customModuleProvider="target" sceneMemberID="viewController">
@@ -208,12 +208,28 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ToDoCell" id="DfF-eE-hHd">
-                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="15" reuseIdentifier="ToDoCell" textLabel="S81-Nc-hnM" detailTextLabel="enn-5N-sfi" rowHeight="60" style="IBUITableViewCellStyleSubtitle" id="DfF-eE-hHd">
+                                <rect key="frame" x="0.0" y="28" width="414" height="60"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DfF-eE-hHd" id="fjz-lM-3JH">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="59.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="S81-Nc-hnM">
+                                            <rect key="frame" x="20" y="8" width="46.5" height="30"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="enn-5N-sfi">
+                                            <rect key="frame" x="20" y="38" width="44" height="14.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
@@ -222,7 +238,7 @@
                             <outlet property="delegate" destination="Nno-Es-Bjs" id="OnB-P3-3Ul"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="zF3-Yu-aNB">
+                    <navigationItem key="navigationItem" title="Workouts" id="zF3-Yu-aNB">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="fbv-tY-JCK">
                             <connections>
                                 <segue destination="BYZ-38-t0r" kind="push" identifier="ShowAddToDo" id="1Vo-7G-TsL"/>
